<resources>
    <string name="app_name">Android 自学示例程序</string>
    <string name="text_on">欢迎使用xxxx系统\n请登录</string>
    <string name="edit_account_hint">请输入您的用户名</string>
    <string name="edit_password_hint">请输入您的密码</string>
    <string name="button_on_text">登   录</string>
    <string name="text_forget_text">忘记密码?</string>
    <string name="text_new_text">注册账号</string>
    <string name="register_text_on_text">欢迎注册xxxx系统\n请填写信息</string>
    <string name="register_button_on_text">检测</string>
    <string name="register_sure_password_text">请再次输入您的密码</string>
    <string name="register_edit_phone_text">请输入您的电话号码</string>
    <string name="register_yzm_text">在此输入验证码</string>
    <string name="register_getyzm_text">点击发送短信</string>
    <string name="forget_password_text_on_text">修改账户密码\n请验证手机</string>
    <string name="forget_password_edit_password">请输入新密码</string>
    <string name="forget_password_sure_password">请确认密码</string>
    <string name="forget_password_button_on_text">确    认</string>
    <string name="index_text_on_text">欢迎使用xxxx系统\n指引页</string>
    <string name="register_button_sure_text">注    册</string>
</resources>
