<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_on">

    <TextView
        android:id="@+id/forget_password_text_on"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/forget_password_text_on_text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/forget_password_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forget_password_text_on"
        android:layout_marginTop="10dp"
        android:hint="@string/register_edit_phone_text"
        android:textSize="20sp"
        android:inputType="phone"/>

    <LinearLayout
        android:id="@+id/forget_password_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_edit_phone"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/forget_password_yzm_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/register_yzm_text"
            android:maxLines="1"
            android:inputType="number"/>

        <TextView
            android:id="@+id/forget_password_getyzm_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register_getyzm_text"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/forget_password_edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forget_password_line"
        android:layout_marginTop="10dp"
        android:hint="@string/forget_password_edit_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/forget_password_sure_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forget_password_edit_password"
        android:layout_marginTop="10dp"
        android:hint="@string/forget_password_sure_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp" />

    <Button android:id="@+id/forget_password_button_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_sure_password"
        android:background="@drawable/main_button_selector"
        android:text="@string/forget_password_button_on_text"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>


</RelativeLayout>